--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1 dfdffsdsf</section>
+				
+				<section>
+					<section>Slide 1</section>
+					<section>Slide 1 down 1</section>
+					<section>Slide 1 down 2</section>
+				</section>
+				
 				<section>Slide 2</section>
 			</div>
 		</div>
