--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<section>Slide 1</section>
 					<section>Slide 1 down 1</section>
 					<section>Slide 1 down 2</section>
+					<section>Slide 1 down 3</section>
 				</section>
 				
 				<section>Slide 2</section>
