--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		
+		<title>Slides</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -27,7 +29,7 @@
 			<div class="slides">
 				
 				<section>
-					<section>Slide 1</section>
+					<section>Firestore</section>
 					<section>Slide 1 down 1</section>
 					<section>Slide 1 down 2</section>
 					<section>Slide 1 down 3</section>
