--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 				</section>
 
 				<section>
-					<section>CORS</section>
-					<section>Cross-Origin Resource Sharing</section>
-					<section>By default, we can only call API endpoints from the same domain.</section>
-                    <section>We got an error because our front-end page is on domain localhost, and from there we're trying to call our back-end API on cloudfunctions.net</section>
+					<section>CORS (Cross-Origin Resource Sharing)</section>
+					<section>
+						We got an error because our front-end page is on domain <code>localhost</code>, and from there we're trying to call 
+						our back-end API on <code>cloudfunctions.net</code> .
+					</section>
+					<section>By default, we can only call API endpoints from the same domain.</section>                    
 					<section>CORS lets us change that default.</section>
 					<section>It lets us specify rules about where these calls to our API can originate from.</section>					
 					<section>For now, let's set it so we can call our API from anywhere.</section>
@@ -80,7 +82,7 @@
 
 					<ul>
 						<li>
-							Firebase CRUD & queries<br/>
+							Firestore CRUD & queries<br/>
 							https://firebase.google.com/docs/firestore/quickstart
 						</li>
 						<li>
