--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 				<section>
 					<section>CORS (Cross-Origin Resource Sharing)</section>
 					<section>
-						We got an error because our front-end page is on domain <code>localhost</code>, and from there we're trying to call 
-						our back-end API on <code>cloudfunctions.net</code> .
+						We got an error because our front-end page is on domain <code><i>localhost</i>i></code>, and from there we're trying to call 
+						our back-end API on <code><i>cloudfunctions.net</i></code> .
 					</section>
 					<section>By default, we can only call API endpoints from the same domain.</section>                    
 					<section>CORS lets us change that default.</section>
 					<section>It lets us specify rules about where these calls to our API can originate from.</section>					
-					<section>For now, let's set it so we can call our API from anywhere.</section>
+					<section>For now, let's set it so we can call our API from any domain.</section>
 				</section>
 				
 				<section>
