--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<section>
 					<section>CORS (Cross-Origin Resource Sharing)</section>
 					<section>
-						We got an error because our front-end page is on domain <code><i>localhost</i>i></code>, and from there we're trying to call 
-						our back-end API on <code><i>cloudfunctions.net</i></code> .
+						We got an error because our front-end page is on domain <strong>localhost</strong>, and from there we're trying to call 
+						our back-end API on <strong>cloudfunctions.net</strong> .
 					</section>
 					<section>By default, we can only call API endpoints from the same domain.</section>                    
 					<section>CORS lets us change that default.</section>
