--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<section>CORS (Cross-Origin Resource Sharing)</section>
 					<section>
 						We got an error because our front-end page is on domain <strong><u>localhost</u></strong>, and from there we're trying to call 
-						our back-end API on <strong><u>cloudfunctions.net</u>></strong> .
+						our back-end API on <strong><u>cloudfunctions.net</u></strong> .
 					</section>
 					<section>By default, we can only call API endpoints from the same domain.</section>                    
 					<section>CORS lets us change that default.</section>
